// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders an anchor 1`] = `
.sxaowvp {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--sx-colors-primary);
  cursor: pointer;
  font-family: var(--sx-fonts-body);
  text-decoration: none;
}

.sxaowvp:focus,
.sxaowvp:hover {
  color: var(--sx-colors-tertiary);
  text-decoration: underline;
}

.sxaowvp:active {
  color: var(--sx-colors-primary);
}

.sx9h9si > .sxaowvp,
.sxggena > .sxaowvp,
.sx03kze > .sxaowvp {
  font-size: 100%;
  line-height: 1;
}

.sx9h9si > .sxaowvp::before,
.sx9h9si > .sxaowvp::after,
.sxggena > .sxaowvp::before,
.sxggena > .sxaowvp::after,
.sx03kze > .sxaowvp::before,
.sx03kze > .sxaowvp::after {
  content: none;
}

.sxaowvpryo8u--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxaowvpryo8u--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxaowvpryo8u--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

<div>
  <a
    class="sxaowvp sxaowvpryo8u--size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
.sxaowvp {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--sx-colors-primary);
  cursor: pointer;
  font-family: var(--sx-fonts-body);
  text-decoration: none;
}

.sxaowvp:focus,
.sxaowvp:hover {
  color: var(--sx-colors-tertiary);
  text-decoration: underline;
}

.sxaowvp:active {
  color: var(--sx-colors-primary);
}

.sx9h9si > .sxaowvp,
.sxggena > .sxaowvp,
.sx03kze > .sxaowvp {
  font-size: 100%;
  line-height: 1;
}

.sx9h9si > .sxaowvp::before,
.sx9h9si > .sxaowvp::after,
.sxggena > .sxaowvp::before,
.sxggena > .sxaowvp::after,
.sx03kze > .sxaowvp::before,
.sx03kze > .sxaowvp::after {
  content: none;
}

.sxaowvpryo8u--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxaowvpryo8u--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxaowvpryo8u--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

.sxaowvpg0h8h--size-lg {
  font-size: var(--sx-fontSizes-lg);
  line-height: 1.52;
}

.sxaowvpg0h8h--size-lg::before {
  content: '';
  margin-bottom: -0.3983em;
  display: table;
}

.sxaowvpg0h8h--size-lg::after {
  content: '';
  margin-top: -0.3983em;
  display: table;
}

<div>
  <a
    class="sxaowvp sxaowvpg0h8h--size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
